--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
         glideVersion = '4.8.0'
         junitVersion = '5.3.1'
         mockkVersion = '1.9'
-        kotlinVersion = '1.3.31'
+        kotlin_version = "1.5.0"
         ktlintVersion = '0.30.0'
         ktxVersion = '1.0.2'
         lifecycleVersion = '2.2.0-alpha02'
@@ -28,7 +28,6 @@ buildscript {
         supportCompatVersion = '1.0.2'
     }
 
-    ext.kotlin_version = "1.5.0"
     repositories {
         google()
         mavenCentral()
