--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
         glideVersion = '4.8.0'
         junitVersion = '5.3.1'
         mockkVersion = '1.9'
-        kotlin_version = "1.5.0"
+        kotlinVersion = "1.5.0"
         ktlintVersion = '0.30.0'
         ktxVersion = '1.0.2'
         lifecycleVersion = '2.2.0-alpha02'
@@ -34,8 +34,8 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
